--- a/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Home/Index.cshtml
@@ -313,7 +313,7 @@
                         <h5>Outstanding Payments </h5>
                     </div>
                     <div class="card-body apex-chart">
-                        <div id="piechart"></div>
+                        <div id="piechart" style="padding-top: 4.5rem !important;"></div>
                     </div>
                 </div>
             </div>
