--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -183,6 +183,9 @@
                                             <button class="btn btn-success" style="background-color: #c9c9c9;color: white;" type="button" type="button" onclick="editTenant(${tenant.TenantId})">
                                                 Edit Tenant
                                             </button>
+                                            <button class="btn btn-danger" style="background-color: #c9c9c9;color: white;" type="button" type="button" onclick="deleteTenant(${tenant.TenantId})">
+                                                Delete Tenant
+                                            </button>
                                        </div>
                                     </div>
                                 </div>
@@ -341,7 +344,7 @@
             if (result.isConfirmed) {
                 $.ajax({
                     url: `/Tenant/Delete/?tenantId=${encodeURIComponent(tenantId)}`,
-                    type: 'DELETE',
+                    type: 'POST',
                     success: function (data) {
                         if (data.success) {
                             window.location.reload();
