--- a/PMS-PropertyHapa.Staff/Views/Lease/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/Index.cshtml
@@ -226,14 +226,23 @@
                     url: '@Url.Action("DeletLease", "Lease")',
                     type: 'POST',
                     data: { leaseId: id },
-                    success: function (task) {
-                        Swal.fire({
-                            icon: 'success',
-                            title: 'Lease deleted successfully',
-                            showConfirmButton: false,
-                            timer: 1500
-                        });
-                        location.reload()
+                    success: function (res) {
+                        if (res.success) {
+                            Swal.fire({
+                                icon: 'success',
+                                title: 'Lease deleted successfully',
+                                showConfirmButton: false,
+                                timer: 1500
+                            });
+                            location.reload()
+                        } else {
+                            Swal.fire({
+                                icon: 'error',
+                                title: res.message,
+                                text: 'Something went wrong!'
+                            });
+                        }
+
                     },
                     error: function (xhr, status, error) {
                         Swal.fire({
