--- a/PMS-PropertyHapa.Staff/Views/Lease/DownloadInvoice.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/DownloadInvoice.cshtml
@@ -144,7 +144,7 @@
                         <tbody>
                             <tr>
                                 <th>Sr #</th>
-                                <td>@Model.PropertyId</td>
+                                <td>@Model.AssetId</td>
                             </tr>
                         </tbody>
                     </table>
