--- a/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
@@ -16,6 +16,7 @@
 
     .card-text {
         font-size: 1rem;
+        paddding: 0px;
     }
 
     .badge {
@@ -66,7 +67,7 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var item in Model)
+           @*  @foreach (var item in Model)
             {
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card shadow-sm h-100">
@@ -103,23 +104,80 @@
                             }
                         </div>
                         <div class="card-actions pb-2">
-                            <button type="button" class="btn btn-success btn-xs" style="cursor: pointer;" onclick="openUnitsModal(@item?.AssetId)">
+                            <button type="button" class="btn btn-success btn-sm" style="cursor: pointer;" onclick="openUnitsModal(@item?.AssetId)">
                                 <i class="fa fa-info-circle fa-lg"></i> Unit Detail
                             </button>
-                            <button type="button" class="btn btn-success btn-xs" style="cursor: pointer;" onclick="assetLateFee(@item.AssetId)">
+                            <button type="button" class="btn btn-success btn-sm" style="cursor: pointer;" onclick="assetLateFee(@item.AssetId)">
                                 <i class="fa fa-pencil fa-lg"></i> Late Fee
                             </button>
-                            <button type="button" class="btn btn-success btn-xs" style="cursor: pointer;" onclick="editAsset(@item.AssetId)">
+                            <button type="button" class="btn btn-success btn-sm" style="cursor: pointer;" onclick="editAsset(@item.AssetId)">
                                 <i class="fa fa-pencil fa-lg"></i> Edit
                             </button>
-                            <button type="button" class="btn btn-danger btn-xs mr-4" style="cursor: pointer;" onclick="deleteAsset(@item.AssetId)">
+                            <button type="button" class="btn btn-danger btn-sm mr-4" style="cursor: pointer;" onclick="deleteAsset(@item.AssetId)">
                                 <i class="fa fa-trash fa-lg"></i> Delete
                             </button>
                             
                         </div>
                     </div>
                 </div>
+            } *@
+            @foreach (var item in Model)
+            {
+                <div class="col-lg-4 col-md-6">
+                    <div class="card shadow-sm h-90">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center mb-3">
+                                @{
+                                    if (!string.IsNullOrEmpty(item.Image))
+                                    {
+                                        <img class="img-fluid rounded-1 property-img" src="@item.Image" alt="Property Image">
+                                    }
+                                    else
+                                    {
+                                        <img class="img-fluid rounded-1 property-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG_TUukNvS-0E486weXLkJDpTubsAcdHdmKw&usqp=CAU" alt="Default Image">
+                                    }
+                                }
+                                <div class="ms-3">
+                                    <h5 class="card-title">@item.BuildingNo - @item.BuildingName</h5>
+                                    <p class="card-text mb-0">@item.SelectedPropertyType</p>
+                                    <p class="card-text">@item.SelectedSubtype</p>
+                                </div>
+                            </div>
+
+                            <p class="card-text"><strong>Units:</strong> @item.Units.ToList().Count()</p>
+                            @if (item.Units.Any())
+                            {
+                                <p class="card-text"><strong>Unit Names:</strong> @string.Join(", ", item.Units.Select(u => u.UnitName))</p>
+                            }
+
+                            <p class="card-text"><strong>Address:</strong> @item.Street1, @item.State, @item.City, @item.Country</p>
+                            @if (item?.OwnerData != null)
+                            {
+                                <p class="card-text"><strong>Owner Name:</strong> @(string.IsNullOrEmpty(item.OwnerData.FirstName) && string.IsNullOrEmpty(item.OwnerData.LastName) ? "N/A" : $"{item.OwnerData.FirstName} {item.OwnerData.LastName}")</p>
+                                <p class="card-text"><strong>Email:</strong> @(string.IsNullOrEmpty(item.OwnerData.EmailAddress) ? "N/A" : item.OwnerData.EmailAddress)</p>
+                            }
+                        </div>
+                        <div class="card-footer bg-transparent border-top-0">
+                            <div class="d-flex justify-content-between">
+                                <button type="button" class="btn btn-info btn-sm text-nowrap" onclick="openUnitsModal(@item?.AssetId)">
+                                    <i class="fa fa-info-circle"></i> Unit Detail
+                                </button>
+                                <button type="button" class="btn btn-warning btn-sm text-nowrap" onclick="assetLateFee(@item.AssetId)">
+                                    <i class="fa fa-pencil"></i> Late Fee
+                                </button>
+                                <button type="button" class="btn btn-success btn-sm text-nowrap" onclick="editAsset(@item.AssetId)">
+                                    <i class="fa fa-pencil"></i> Edit
+                                </button>
+                                <button type="button" class="btn btn-danger btn-sm text-nowrap" onclick="deleteAsset(@item.AssetId)">
+                                    <i class="fa fa-trash"></i> Delete
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             }
+
         </div>
     </div>
 </div>
