--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -417,41 +417,41 @@
     <!-- Sidebar jquery-->
     <script src="~/Dashboard/assets/js/config.js"></script>
     <!-- Plugins JS start-->
-    <script src="~/Dashboard/assets/js/sidebar-menu.js"></script>
-    <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
+    <script src="~/dashboard/assets/js/sidebar-menu.js"></script>
+    <script src="~/dashboard/assets/js/select2/select2.full.min.js"></script> 
     <script src="~/Dashboard/assets/js/chart/google/google-chart-loader.js"></script>
-    <script src="~/Dashboard/assets/js/chart/knob/knob.min.js"></script>
-    <script src="~/Dashboard/assets/js/chart/knob/knob-chart.js"></script>
-    <script src="~/Dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
-    <script src="~/Dashboard/assets/js/chart/apex-chart/stock-prices.js"></script>
+    <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
+    <script src="~/dashboard/assets/js/chart/knob/knob.min.js"></script>
+    <script src="~/dashboard/assets/js/chart/knob/knob-chart.js"></script>
+    <script src="~/dashboard/assets/js/chart/apex-chart/apex-chart.js"></script>
+    <script src="~/dashboard/assets/js/chart/apex-chart/stock-prices.js"></script>
     <script src="~/dashboard/assets/js/jkanban/jkanban.js"></script>
-    <script src="~/Dashboard/assets/js/notify/bootstrap-notify.min.js"></script>
-    <script src="~/Dashboard/assets/js/dashboard/default.js"></script>
-    <script src="~/dashboard/assets/js/chart-widget.js"></script>
-    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
-    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
-    <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.custom.js"></script>
-    <script src="~/Dashboard/assets/js/photoswipe/photoswipe.min.js"></script>
-    <script src="~/Dashboard/assets/js/photoswipe/photoswipe-ui-default.min.js"></script>
-    <script src="~/Dashboard/assets/js/photoswipe/photoswipe.js"></script>
-    <script src="~/Dashboard/assets/js/typeahead/handlebars.js"></script>
-    <script src="~/Dashboard/assets/js/typeahead/typeahead.bundle.js"></script>
-    <script src="~/Dashboard/assets/js/typeahead/typeahead.custom.js"></script>
-    <script src="~/Dashboard/assets/js/typeahead-search/handlebars.js"></script>
-    <script src="~/Dashboard/assets/js/typeahead-search/typeahead-custom.js"></script>
-    <script src="~/Dashboard/assets/js/height-equal.js"></script>
+    <script src="~/dashboard/assets/js/notify/bootstrap-notify.min.js"></script>
+    <script src="~/dashboard/assets/js/notify/index.js"></script>
+    <script src="~/dashboard/assets/js/dashboard/default.js"></script>
+    <script src="~/dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
+    <script src="~/dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
+    @* <script src="~/dashboard/assets/js/datepicker/date-picker/datepicker.custom.js"></script> *@
+    <script src="~/dashboard/assets/js/photoswipe/photoswipe.min.js"></script>
+    <script src="~/dashboard/assets/js/photoswipe/photoswipe-ui-default.min.js"></script>
+    <script src="~/dashboard/assets/js/photoswipe/photoswipe.js"></script>
+    <script src="~/dashboard/assets/js/typeahead/handlebars.js"></script>
+    <script src="~/dashboard/assets/js/typeahead/typeahead.bundle.js"></script>
+    @* <script src="~/dashboard/assets/js/typeahead/typeahead.custom.js"></script> *@
+    <script src="~/dashboard/assets/js/typeahead-search/handlebars.js"></script>
+    @* <script src="~/dashboard/assets/js/typeahead-search/typeahead-custom.js"></script> *@
+    <script src="~/dashboard/assets/js/height-equal.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartjs/chart.min.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartist/chartist.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
     <script src="~/Dashboard/assets/js/prism/prism.min.js"></script>
     <script src="~/Dashboard/assets/js/counter/jquery.waypoints.min.js"></script>
     <script src="~/Dashboard/assets/js/counter/jquery.counterup.min.js"></script>
-    <script src="~/Dashboard/assets/js/counter/counter-custom.js"></script>
+    @* <script src="~/Dashboard/assets/js/counter/counter-custom.js"></script> *@
     <script src="~/Dashboard/assets/js/owlcarousel/owl.carousel.js"></script>
-    <script src="~/Dashboard/assets/js/owlcarousel/owl-custom.js"></script>
+    @* <script src="~/Dashboard/assets/js/owlcarousel/owl-custom.js"></script> *@
     <script src="~/Dashboard/assets/js/dashboard/dashboard_2.js"></script>
     <script src="~/Dashboard/assets/js/tooltip-init.js"></script>
-    <script src="~/dashboard/assets/js/select2/select2.full.min.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/Dashboard/assets/js/script.js"></script>
@@ -460,7 +460,7 @@
     <!-- Plugin used-->
     <!-- Plugins JS start-->
     <script src="~/Dashboard/assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/Dashboard/assets/js/datatable/datatables/datatable.custom.js"></script>
+    @* <script src="~/Dashboard/assets/js/datatable/datatables/datatable.custom.js"></script> *@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
 
@@ -477,7 +477,7 @@
 
     <script>
         $(document).ready(function () {
-            debugger;
+            //debugger;
             var organizationName = localStorage.getItem('organizationName');
             var organizationLogo = localStorage.getItem('organizationLogo');
             var organizationIcon = localStorage.getItem('organizationIcon');
@@ -555,7 +555,7 @@
                 type: 'GET',
                 data: { tenantId: tid },
                 success: function (response) {
-                     debugger
+                     //debugger;
                     var data = response.data;
                     $('#organizationName').val(data.OrganizationName);
                     $('#organizationDescription').val(data.OrganizationDescription);
@@ -671,7 +671,7 @@
 
             function saveTenantOrganizationInfo() {
                 var tenantOrganizationInfoData = {
-                    // Id: localStorage.getItem('tid'),
+                    Id: localStorage.getItem('tid') || 0,
                     OrganizationName: $('#organizationName').val(),
                     OrganizationDescription: $('#organizationDescription').val(),
                     OrganizatioPrimaryColor: $('#organizationPrimaryColor').val(),
