--- a/PMS-PropertyHapa.Staff/Views/Reports/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/Index.cshtml
@@ -40,7 +40,7 @@
                     </div>
                     <div class="card-footer">
                         <h4 class="card-title text-center">
-                            <a href="@Url.Action("LeaseReports", "Reports")">View Lease Reports</a>
+                            <a href="@Url.Action("LeaseReports", "Reports")">Lease Reports</a>
                         </h4>
                     </div>
                 </div>
@@ -52,7 +52,19 @@
                     </div>
                     <div class="card-footer">
                         <h4 class="card-title text-center">
-                            <a href="@Url.Action("InvoiceReports", "Reports")">View Invoice Reports</a>
+                            <a href="@Url.Action("InvoiceReports", "Reports")">Invoice Reports</a>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        <i class="icon-files fa-3x"></i>
+                    </div>
+                    <div class="card-footer">
+                        <h4 class="card-title text-center">
+                            <a href="@Url.Action("SmartReports", "Reports")">Smart Reports</a>
                         </h4>
                     </div>
                 </div>
